# tcp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  util.hpp
app/tcp-client/: CMakeLists.txt  main.cpp
app/tcp-server/: CMakeLists.txt  main.cpp
include/tcp/: ClientSocket.hpp  IpAddr.hpp  ServerSocket.hpp  Socket.hpp  SocketAddr.hpp  tcp.hpp
src/: SocketAddr.cpp
src/linux/: .clang-tidy  ClientSocket.cpp  ServerSocket.cpp  Socket.cpp  errors.hpp  util.hpp
